# PreBuiltSoTest

./: oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: oh-package-lock.json5
entry/src/main/cpp/: CMakeLists.txt  hello.cpp
entry/src/main/cpp/types/libentry/: index.d.ts
entry/src/main/ets/pages/: Index.ets
